# playground_qml_live_image_viewer

./: .gitignore  CMakeLists.txt
.github/workflows/: tests.yaml
apps/: CMakeCache.txt
apps/playground_qml_live_image_viewer/: CMakeLists.txt
libs/playground_qml_live_image_viewer/core/: CMakeLists.txt  image_processing.cc  image_processing.h
libs/playground_qml_live_image_viewer/engine/: CMakeLists.txt  Engine.cc  Engine.h  RenderSystem.cc  RenderSystem.h
libs/playground_qml_live_image_viewer/engine/Camera/: CameraModel.cc  CameraModel.h
libs/playground_qml_live_image_viewer/engine/ClippingSpace/: ClippingSpace.cc  ClippingSpace.h
libs/playground_qml_live_image_viewer/engine/Color/: Color.h
libs/playground_qml_live_image_viewer/engine/Matrix/: HomogenousTransformationMatrix.cc
libs/playground_qml_live_image_viewer/engine/Vector/: Vectors.cc  Vectors.h
libs/playground_qml_live_image_viewer/ui/: CMakeLists.txt  model.h  ui.cc  ui.qrc
libs/playground_qml_live_image_viewer/ui/qml/: MainWindow.qml  main_window.qml
libs/playground_qml_live_image_viewer/ui/qml/items/: AdvancedSlider.qml  AdvancedSlider.qml.autosave  AdvancedSwitch.qml  DoubleSpinBox.qml
scripts/: install_dependencies_arch.sh  install_dependencies_debian_ubuntu.sh
temp/: CMakeLists.txt  README.md
temp/Engine/: CMakeLists.txt
temp/Engine/apps/playground_camera_model/: CMakeLists.txt  main.cc
temp/Engine/libs/playground_camera_model/core/: CMakeLists.txt  Engine.cc  Engine.h  RenderSystem.cc  RenderSystem.h
temp/Engine/libs/playground_camera_model/core/Camera/: CameraModel.cc  CameraModel.h
temp/Engine/libs/playground_camera_model/core/ClippingSpace/: ClippingSpace.cc  ClippingSpace.h
temp/Engine/libs/playground_camera_model/core/Color/: Color.cc
temp/Engine/libs/playground_camera_model/core/FPSCounter/: FPSCounter.cc  FPSCounter.h
temp/Engine/libs/playground_camera_model/core/Matrix/: HomogenousTransformationMatrix.h
temp/Engine/libs/playground_camera_model/core/Shape/: Shape.cc  Shape.h
temp/Engine/libs/playground_camera_model/core/Vector/: Vectors.h
temp/Engine/libs/playground_camera_model/core/Window/: Window.cc  Window.h
temp/apps/playground_qml_live_image_viewer/: main.cc
temp/libs/playground_qml_live_image_viewer/core/: image_processing.cc  image_processing.h
temp/libs/playground_qml_live_image_viewer/ui/: CMakeLists.txt  model.h  ui.cc  ui.h
temp/libs/playground_qml_live_image_viewer/ui/qml/: MainWindow.qml
temp/libs/playground_qml_live_image_viewer/ui/qml/items/: AdvancedSlider.qml
unit_tests/: CMakeLists.txt
